Refactor: sonarQube 코드 리팩토린
sonarQube 활용한 코드 버그 및 코드 스멜 수정